# field-day

./: .dockerignore  .eslintrc.cjs  .gitignore  .gitignore-build  .oxlintrc.json  ACHIEVEMENT_IMPLEMENTATION_COMPLETE.md  ACHIEVEMENT_SYSTEM.md  BUILD-GUIDE.md  BUILD-INSTALLER.md  BUILD-README.md  BUILD.md  BUILD_PIPELINE_COMPLETE.md  CHANGELOG.md  CONTRIBUTING.md  DOCKER.md  DOCUMENTATION_COMPLETE.md  Dockerfile  Dockerfile.build  Dockerfile.dev  Dockerfile.prod  ENHANCEMENTS_COMPLETE.md  FILE_STORAGE_MIGRATION_COMPLETE.md  FINAL_ENHANCEMENTS_COMPLETE.md  FINAL_MESSAGING_COMPLETE.md  FIXES-SUMMARY.md  HEADER_CONSISTENCY_COMPLETE.md  HTTPS_SETUP_COMPLETE.md  ICON-GENERATION.md  LICENSE  LOCALSTORAGE_MIGRATION_COMPLETE.md  LOCALSTORAGE_MIGRATION_FIXES.md  MESH_NETWORK.md  MESSAGE_DEDUPLICATION_COMPLETE.md  NETWORK_CONFIG_INTEGRATION.md  NETWORK_DEBUGGING.md  NETWORK_TESTING.md  PORT_8080_HARDCODING_SUMMARY.md  QSO_SYNC_FIX.md  QUICK-BUILD.md  README.md  (+56 more)
.github/: dependabot.yml  release-please-config-beta.json  release-please-config.json
backend-service/: Cargo-simple.toml  Cargo.toml  README.md
backend-service/src/: config_manager.rs  config_manager_simple.rs  main.rs  mesh.rs  message.rs  qso.rs  station.rs  types.rs
backend-service/src/api/: admin.rs  config.rs  files.rs  mesh.rs  message.rs  mod.rs  qso.rs  station.rs
docs/: README.md
installer/: field-day-logger.iss
public/: test-docs.html  test-modal-messaging-ui.html  test-modal-messaging.html
src/: App.vue  electron-main.js  main.ts  preload.js  preload.ts  shims-vue.d.ts
tests/: qso-sync-test.html  (+67 more)
(+84 files in other folders)
