[package]
name = "fieldday-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
warp = "0.3"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures-util = "0.3"
clap = { version = "4.4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
dirs = "5.0"
local-ip-address = "0.5"
